--- a/iphone/Maps/th.lproj/Localizable.strings
+++ b/iphone/Maps/th.lproj/Localizable.strings
@@ -1637,7 +1637,7 @@
 "placepage_hotel_nearby" = "บริเวณใกล้เคียง";
 
 /* For ordering a taxi (as opposed to hotels or other things) */
-"taxi_order" = "สั่ง";
+"taxi_order" = "เรียกแท็กซี่";
 
 /* How long it is until the taxi arrives */
 "taxi_wait" = "คาดว่าภายใน %s";
@@ -1700,29 +1700,29 @@
 
 "dialog_taxi_error" = "ไม่สามารถทำการจองแท็กซี่ได้ชั่วคราว";
 
-"advertisement" = "Advertisement";
+"advertisement" = "โฆษณา";
 
-"mobile_data_dialog" = "Use mobile internet to show detailed information?";
+"mobile_data_dialog" = "ใช้อินเทอร์เน็ตมือถือแสดงข้อมูลโดยรายละเอียดหรือไม่?";
 
-"mobile_data_option_always" = "Use Always";
+"mobile_data_option_always" = "ใช้เสมอ";
 
-"mobile_data_option_today" = "Only Today";
+"mobile_data_option_today" = "วันนี้เท่านั้น";
 
-"mobile_data_option_not_today" = "Do not Use Today";
+"mobile_data_option_not_today" = "ไม่ใช้วันนี้";
 
-"mobile_data" = "Mobile Internet";
+"mobile_data" = "อินเทอร์เน็ตมือถือ";
 
-"mobile_data_description" = "Mobile internet is required for displaying detailed information about places, such as photographs, prices and reviews.";
+"mobile_data_description" = "จำเป็นต้องใช้อินเทอร์เน็ตมือถือในการแสดงข้อมูลโดยรายละเอียดเกี่ยวกับสถานที่ เช่น รูปถ่าย ราคา และรีวิว";
 
-"mobile_data_option_never" = "Never Use";
+"mobile_data_option_never" = "ไม่ใช้เลย";
 
-"mobile_data_option_ask" = "Always Ask";
+"mobile_data_option_ask" = "ถามก่อนเสมอ";
 
-"traffic_update_maps_text" = "To display traffic data, maps must be updated.";
+"traffic_update_maps_text" = "ต้องอัปเดตแผนที่เพื่อแสดงข้อมูลการจราจร";
 
-"traffic_outdated" = "Traffic data is outdated.";
+"traffic_outdated" = "ข้อมูลการจราจรเก่าเกินไปแล้ว";
 
-"big_font" = "Bigger labels";
+"big_font" = "ป้ายใหญ่ขึ้น";
 
 "traffic_update_app" = "Please update MAPS.ME";
 
