--- a/android/res/values-cs/strings.xml
+++ b/android/res/values-cs/strings.xml
@@ -959,7 +959,7 @@
 	<!-- For place page hotel nearby block -->
 	<string name="placepage_hotel_nearby">Nedaleké</string>
 	<!-- For ordering a taxi (as opposed to hotels or other things) -->
-	<string name="taxi_order">Objednat</string>
+	<string name="taxi_order">Objednat taxi</string>
 	<!-- How long it is until the taxi arrives -->
 	<string name="taxi_wait">Očekávaný příjezd za %s</string>
 	<!-- When there are no available taxis nearby -->
@@ -994,4 +994,16 @@
 	<string name="whatsnew_uber_message">Objednejte si taxi Uber přímo z aplikace!</string>
 	<string name="dialog_taxi_offline">Objednání taxi není v režimu offline k dispozici.</string>
 	<string name="dialog_taxi_error">Objednání taxi není dočasně k dispozici.</string>
+	<string name="advertisement">Inzerce</string>
+	<string name="mobile_data_dialog">Použít mobilní internet ke zobrazení podrobnějších informací?</string>
+	<string name="mobile_data_option_always">Vždy použít</string>
+	<string name="mobile_data_option_today">Jen dnes</string>
+	<string name="mobile_data_option_not_today">Nepoužívat dnes</string>
+	<string name="mobile_data">Mobilní Internet</string>
+	<string name="mobile_data_description">Ke zobrazení podrobných informací o místech, jako jsou fotografie, ceny a recenze, je třeba mobilní internet.</string>
+	<string name="mobile_data_option_never">Nikdy nepoužívat</string>
+	<string name="mobile_data_option_ask">Vždy se zeptat</string>
+	<string name="traffic_update_maps_text">Ke zobrazení údajů o provozu musí být aktualizovány mapy.</string>
+	<string name="traffic_outdated">Data o provozu jsou zastaralá.</string>
+	<string name="big_font">Větší štítky</string>
 </resources>
