--- a/android/res/values-fi/strings.xml
+++ b/android/res/values-fi/strings.xml
@@ -952,7 +952,7 @@
 	<!-- For place page hotel nearby block -->
 	<string name="placepage_hotel_nearby">Lähellä</string>
 	<!-- For ordering a taxi (as opposed to hotels or other things) -->
-	<string name="taxi_order">Tilaa</string>
+	<string name="taxi_order">Taksin tilaaminen</string>
 	<!-- How long it is until the taxi arrives -->
 	<string name="taxi_wait">Saapumiseen arviolta %s</string>
 	<!-- When there are no available taxis nearby -->
@@ -987,4 +987,16 @@
 	<string name="whatsnew_uber_message">Tilaa Uber -taksi suoraan sovelluksesta!</string>
 	<string name="dialog_taxi_offline">Taksin tilaaminen ei ole mahdollista ilman verkkoyhteyttä.</string>
 	<string name="dialog_taxi_error">Taksin tilaaminen ei ole tällä hetkellä mahdollista.</string>
+	<string name="advertisement">Mainos</string>
+	<string name="mobile_data_dialog">Näytetäänkö lisätiedot mobiili-internetillä?</string>
+	<string name="mobile_data_option_always">Käytä aina</string>
+	<string name="mobile_data_option_today">Vain tänään</string>
+	<string name="mobile_data_option_not_today">Älä käytä tänään</string>
+	<string name="mobile_data">Mobiili-internet</string>
+	<string name="mobile_data_description">Mobiili-internet vaaditaan paikkojen lisätietojen näyttämiseen, kuten valokuviin, hintoihin ja arvioihin.</string>
+	<string name="mobile_data_option_never">Älä käytä koskaan</string>
+	<string name="mobile_data_option_ask">Kysy aina</string>
+	<string name="traffic_update_maps_text">Liikennetietojen näyttämiseksi kartat on päivitettävä.</string>
+	<string name="traffic_outdated">Liikennetiedot ovat vanhentuneet.</string>
+	<string name="big_font">Suuremmat selitykset</string>
 </resources>
