--- a/android/res/values-hu/strings.xml
+++ b/android/res/values-hu/strings.xml
@@ -952,7 +952,7 @@
 	<!-- For place page hotel nearby block -->
 	<string name="placepage_hotel_nearby">Közeli</string>
 	<!-- For ordering a taxi (as opposed to hotels or other things) -->
-	<string name="taxi_order">Rendelés</string>
+	<string name="taxi_order">Taxi rendelés</string>
 	<!-- How long it is until the taxi arrives -->
 	<string name="taxi_wait">Várható %s</string>
 	<!-- When there are no available taxis nearby -->
@@ -987,4 +987,16 @@
 	<string name="whatsnew_uber_message">Hívj Uber-taxit közvetlenül az alkalmazásból!</string>
 	<string name="dialog_taxi_offline">Taxirendelés offline módban nem lehetséges.</string>
 	<string name="dialog_taxi_error">A taxirendelés átmenetileg nem elérhető.</string>
+	<string name="advertisement">Hirdetés</string>
+	<string name="mobile_data_dialog">Részletes információk megjelenítése a mobil internet segítségével?</string>
+	<string name="mobile_data_option_always">Mindig használja</string>
+	<string name="mobile_data_option_today">Csak ma</string>
+	<string name="mobile_data_option_not_today">Ma nem használhatja</string>
+	<string name="mobile_data">Mobil Internet</string>
+	<string name="mobile_data_description">Mobil internetre van szükség helyszínekre vonatkozó részletes információ, mint például fotók, árak és szemlék megjelenítéséhez.</string>
+	<string name="mobile_data_option_never">Soha se használja</string>
+	<string name="mobile_data_option_ask">Mindig kérdezze meg</string>
+	<string name="traffic_update_maps_text">Forgalmi adatok megjelenítéséhez a térképeket frissíteni kell.</string>
+	<string name="traffic_outdated">A forgalmi adatok elavultak.</string>
+	<string name="big_font">Nagyobb címkék</string>
 </resources>
