--- a/android/res/values-ko/strings.xml
+++ b/android/res/values-ko/strings.xml
@@ -948,7 +948,7 @@
 	<!-- For place page hotel nearby block -->
 	<string name="placepage_hotel_nearby">근처</string>
 	<!-- For ordering a taxi (as opposed to hotels or other things) -->
-	<string name="taxi_order">주문</string>
+	<string name="taxi_order">택시 주문</string>
 	<!-- How long it is until the taxi arrives -->
 	<string name="taxi_wait">%s 예상</string>
 	<!-- When there are no available taxis nearby -->
@@ -983,4 +983,16 @@
 	<string name="whatsnew_uber_message">Uber 택시를 직접 앱에서 예약하세요.</string>
 	<string name="dialog_taxi_offline">오프라인 모드에서는 택시를 예약할 수 없습니다.</string>
 	<string name="dialog_taxi_error">일시적으로 택시를 예약할 수 없습니다.</string>
+	<string name="advertisement">광고</string>
+	<string name="mobile_data_dialog">모바일 인터넷을 사용하여 자세한 정보를 표시하시겠습니까?</string>
+	<string name="mobile_data_option_always">항상 사용</string>
+	<string name="mobile_data_option_today">오늘만</string>
+	<string name="mobile_data_option_not_today">오늘 사용 안 함</string>
+	<string name="mobile_data">모바일 인터넷</string>
+	<string name="mobile_data_description">모바일 인터넷은 사진, 가격, 리뷰 등 장소에 대한 자세한 정보를 표시하는 데 필요합니다.</string>
+	<string name="mobile_data_option_never">전혀 사용 안 함</string>
+	<string name="mobile_data_option_ask">항상 표시</string>
+	<string name="traffic_update_maps_text">교통 데이터를 표시하려면 지도를 업데이트해야 합니다.</string>
+	<string name="traffic_outdated">교통 데이터가 오래되었습니다.</string>
+	<string name="big_font">더 큰 레이블</string>
 </resources>
