--- a/android/res/values-nl/strings.xml
+++ b/android/res/values-nl/strings.xml
@@ -952,7 +952,7 @@
 	<!-- For place page hotel nearby block -->
 	<string name="placepage_hotel_nearby">In de buurt</string>
 	<!-- For ordering a taxi (as opposed to hotels or other things) -->
-	<string name="taxi_order">Bestellen</string>
+	<string name="taxi_order">Bestel een taxi</string>
 	<!-- How long it is until the taxi arrives -->
 	<string name="taxi_wait">Verwacht binnen %s</string>
 	<!-- When there are no available taxis nearby -->
@@ -987,4 +987,16 @@
 	<string name="whatsnew_uber_message">Bestel een Uber-taxi rechtstreeks vanuit de app!</string>
 	<string name="dialog_taxi_offline">Het bestellen van een taxi is niet beschikbaar in de offline modus.</string>
 	<string name="dialog_taxi_error">Het bestellen van een taxi is tijdelijk niet beschikbaar.</string>
+	<string name="advertisement">Reclame</string>
+	<string name="mobile_data_dialog">Mobiel internet gebruiken om gedetailleerde informatie weer te geven?</string>
+	<string name="mobile_data_option_always">Altijd Gebruiken</string>
+	<string name="mobile_data_option_today">Enkel Vandaag</string>
+	<string name="mobile_data_option_not_today">Vandaag niet Gebruiken</string>
+	<string name="mobile_data">Mobiel Internet</string>
+	<string name="mobile_data_description">Mobiel internet is vereist voor het weergeven van gedetailleerde informatie over plaatsen, zoals foto\&#39;s, prijzen en beoordelingen.</string>
+	<string name="mobile_data_option_never">Nooit Gebruiken</string>
+	<string name="mobile_data_option_ask">Altijd Vragen</string>
+	<string name="traffic_update_maps_text">Om verkeersgegevens weer te geven, moeten de kaarten bijgewerkt worden.</string>
+	<string name="traffic_outdated">Verkeersgegevens zijn verouderd.</string>
+	<string name="big_font">Grotere labels</string>
 </resources>
