--- a/android/res/values-sv/strings.xml
+++ b/android/res/values-sv/strings.xml
@@ -956,7 +956,7 @@
 	<!-- For place page hotel nearby block -->
 	<string name="placepage_hotel_nearby">I närheten</string>
 	<!-- For ordering a taxi (as opposed to hotels or other things) -->
-	<string name="taxi_order">Boka</string>
+	<string name="taxi_order">Beställ en taxi</string>
 	<!-- How long it is until the taxi arrives -->
 	<string name="taxi_wait">Förväntas om %s</string>
 	<!-- When there are no available taxis nearby -->
@@ -991,4 +991,16 @@
 	<string name="whatsnew_uber_message">Beställ en Uber direkt från appen!</string>
 	<string name="dialog_taxi_offline">Du kan inte beställa en taxi i offlineläge.</string>
 	<string name="dialog_taxi_error">Du kan inte beställa en taxi just nu.</string>
+	<string name="advertisement">Annons</string>
+	<string name="mobile_data_dialog">Använd mobilt nätverk för att visa detaljerad information?</string>
+	<string name="mobile_data_option_always">Använd alltid</string>
+	<string name="mobile_data_option_today">Endast idag</string>
+	<string name="mobile_data_option_not_today">Använd inte idag</string>
+	<string name="mobile_data">Mobilt internet</string>
+	<string name="mobile_data_description">Mobil internet krävs för att visa detaljerad information om platser, som t. ex. fotografier, priser och omdömen.</string>
+	<string name="mobile_data_option_never">Använd aldrig</string>
+	<string name="mobile_data_option_ask">Fråga alltid</string>
+	<string name="traffic_update_maps_text">Kartor måste uppdateras för att visa trafikdata.</string>
+	<string name="traffic_outdated">Trafikdata är inaktuellt.</string>
+	<string name="big_font">Större etiketter</string>
 </resources>
