--- a/iphone/Maps/cs.lproj/Localizable.strings
+++ b/iphone/Maps/cs.lproj/Localizable.strings
@@ -1637,7 +1637,7 @@
 "placepage_hotel_nearby" = "Nedaleké";
 
 /* For ordering a taxi (as opposed to hotels or other things) */
-"taxi_order" = "Objednat";
+"taxi_order" = "Objednat taxi";
 
 /* How long it is until the taxi arrives */
 "taxi_wait" = "Očekávaný příjezd za %s";
@@ -1700,29 +1700,29 @@
 
 "dialog_taxi_error" = "Objednání taxi není dočasně k dispozici.";
 
-"advertisement" = "Advertisement";
+"advertisement" = "Inzerce";
 
-"mobile_data_dialog" = "Use mobile internet to show detailed information?";
+"mobile_data_dialog" = "Použít mobilní internet ke zobrazení podrobnějších informací?";
 
-"mobile_data_option_always" = "Use Always";
+"mobile_data_option_always" = "Vždy použít";
 
-"mobile_data_option_today" = "Only Today";
+"mobile_data_option_today" = "Jen dnes";
 
-"mobile_data_option_not_today" = "Do not Use Today";
+"mobile_data_option_not_today" = "Nepoužívat dnes";
 
-"mobile_data" = "Mobile Internet";
+"mobile_data" = "Mobilní Internet";
 
-"mobile_data_description" = "Mobile internet is required for displaying detailed information about places, such as photographs, prices and reviews.";
+"mobile_data_description" = "Ke zobrazení podrobných informací o místech, jako jsou fotografie, ceny a recenze, je třeba mobilní internet.";
 
-"mobile_data_option_never" = "Never Use";
+"mobile_data_option_never" = "Nikdy nepoužívat";
 
-"mobile_data_option_ask" = "Always Ask";
+"mobile_data_option_ask" = "Vždy se zeptat";
 
-"traffic_update_maps_text" = "To display traffic data, maps must be updated.";
+"traffic_update_maps_text" = "Ke zobrazení údajů o provozu musí být aktualizovány mapy.";
 
-"traffic_outdated" = "Traffic data is outdated.";
+"traffic_outdated" = "Data o provozu jsou zastaralá.";
 
-"big_font" = "Bigger labels";
+"big_font" = "Větší štítky";
 
 "traffic_update_app" = "Please update MAPS.ME";
 
