--- a/iphone/Maps/da.lproj/Localizable.strings
+++ b/iphone/Maps/da.lproj/Localizable.strings
@@ -1637,7 +1637,7 @@
 "placepage_hotel_nearby" = "I nærheden";
 
 /* For ordering a taxi (as opposed to hotels or other things) */
-"taxi_order" = "Bestil";
+"taxi_order" = "Bestil en taxa";
 
 /* How long it is until the taxi arrives */
 "taxi_wait" = "Forventes om %s";
@@ -1700,29 +1700,29 @@
 
 "dialog_taxi_error" = "Bestilling af en taxi er ikke muligt lige nu.";
 
-"advertisement" = "Advertisement";
+"advertisement" = "Annonce";
 
-"mobile_data_dialog" = "Use mobile internet to show detailed information?";
+"mobile_data_dialog" = "Skal mobilt internet bruges til at vise detaljerede oplysninger?";
 
-"mobile_data_option_always" = "Use Always";
+"mobile_data_option_always" = "Brug altid";
 
-"mobile_data_option_today" = "Only Today";
+"mobile_data_option_today" = "Kun i dag";
 
-"mobile_data_option_not_today" = "Do not Use Today";
+"mobile_data_option_not_today" = "Brug ikke i dag";
 
-"mobile_data" = "Mobile Internet";
+"mobile_data" = "Mobilt internet";
 
-"mobile_data_description" = "Mobile internet is required for displaying detailed information about places, such as photographs, prices and reviews.";
+"mobile_data_description" = "Mobile internet er nødvendigt til visning af detaljerede oplysninger om steder, såsom fotos, priser og anmeldelser.";
 
-"mobile_data_option_never" = "Never Use";
+"mobile_data_option_never" = "Brug aldrig";
 
-"mobile_data_option_ask" = "Always Ask";
+"mobile_data_option_ask" = "Spørg altid";
 
-"traffic_update_maps_text" = "To display traffic data, maps must be updated.";
+"traffic_update_maps_text" = "Kortet opdateres for kunne vise trafikdata.";
 
-"traffic_outdated" = "Traffic data is outdated.";
+"traffic_outdated" = "Trafikdata er forældede.";
 
-"big_font" = "Bigger labels";
+"big_font" = "Større etiketter";
 
 "traffic_update_app" = "Please update MAPS.ME";
 
