--- a/iphone/Maps/de.lproj/Localizable.strings
+++ b/iphone/Maps/de.lproj/Localizable.strings
@@ -1637,7 +1637,7 @@
 "placepage_hotel_nearby" = "In der Nähe";
 
 /* For ordering a taxi (as opposed to hotels or other things) */
-"taxi_order" = "Bestellen";
+"taxi_order" = "Taxi rufen";
 
 /* How long it is until the taxi arrives */
 "taxi_wait" = "Erwartet in %s";
@@ -1700,29 +1700,29 @@
 
 "dialog_taxi_error" = "Das Bestellen eines Taxis ist vorübergehend nicht verfügbar.";
 
-"advertisement" = "Advertisement";
+"advertisement" = "Werbung";
 
-"mobile_data_dialog" = "Use mobile internet to show detailed information?";
+"mobile_data_dialog" = "Mobiles Internet verwenden, um genauere Informationen anzuzeigen?";
 
-"mobile_data_option_always" = "Use Always";
+"mobile_data_option_always" = "Immer verwenden";
 
-"mobile_data_option_today" = "Only Today";
+"mobile_data_option_today" = "Nur heute";
 
-"mobile_data_option_not_today" = "Do not Use Today";
+"mobile_data_option_not_today" = "Heute nicht verwenden";
 
-"mobile_data" = "Mobile Internet";
+"mobile_data" = "Mobiles Internet";
 
-"mobile_data_description" = "Mobile internet is required for displaying detailed information about places, such as photographs, prices and reviews.";
+"mobile_data_description" = "Mobiles Internet wird benötigt, um genauere Informationen über Orte anzuzeigen, wie Fotos, Preise und Bewertungen.";
 
-"mobile_data_option_never" = "Never Use";
+"mobile_data_option_never" = "Nie verwenden";
 
-"mobile_data_option_ask" = "Always Ask";
+"mobile_data_option_ask" = "Immer fragen";
 
-"traffic_update_maps_text" = "To display traffic data, maps must be updated.";
+"traffic_update_maps_text" = "Um Verkehrsdaten anzuzeigen, müssen die Karten aktualisiert werden.";
 
-"traffic_outdated" = "Traffic data is outdated.";
+"traffic_outdated" = "Verkehrsdaten sind veraltet.";
 
-"big_font" = "Bigger labels";
+"big_font" = "Größere Bezeichnungen";
 
 "traffic_update_app" = "Please update MAPS.ME";
 
