--- a/iphone/Maps/fi.lproj/Localizable.strings
+++ b/iphone/Maps/fi.lproj/Localizable.strings
@@ -1637,7 +1637,7 @@
 "placepage_hotel_nearby" = "Lähellä";
 
 /* For ordering a taxi (as opposed to hotels or other things) */
-"taxi_order" = "Tilaa";
+"taxi_order" = "Taksin tilaaminen";
 
 /* How long it is until the taxi arrives */
 "taxi_wait" = "Saapumiseen arviolta %s";
@@ -1700,29 +1700,29 @@
 
 "dialog_taxi_error" = "Taksin tilaaminen ei ole tällä hetkellä mahdollista.";
 
-"advertisement" = "Advertisement";
+"advertisement" = "Mainos";
 
-"mobile_data_dialog" = "Use mobile internet to show detailed information?";
+"mobile_data_dialog" = "Näytetäänkö lisätiedot mobiili-internetillä?";
 
-"mobile_data_option_always" = "Use Always";
+"mobile_data_option_always" = "Käytä aina";
 
-"mobile_data_option_today" = "Only Today";
+"mobile_data_option_today" = "Vain tänään";
 
-"mobile_data_option_not_today" = "Do not Use Today";
+"mobile_data_option_not_today" = "Älä käytä tänään";
 
-"mobile_data" = "Mobile Internet";
+"mobile_data" = "Mobiili-internet";
 
-"mobile_data_description" = "Mobile internet is required for displaying detailed information about places, such as photographs, prices and reviews.";
+"mobile_data_description" = "Mobiili-internet vaaditaan paikkojen lisätietojen näyttämiseen, kuten valokuviin, hintoihin ja arvioihin.";
 
-"mobile_data_option_never" = "Never Use";
+"mobile_data_option_never" = "Älä käytä koskaan";
 
-"mobile_data_option_ask" = "Always Ask";
+"mobile_data_option_ask" = "Kysy aina";
 
-"traffic_update_maps_text" = "To display traffic data, maps must be updated.";
+"traffic_update_maps_text" = "Liikennetietojen näyttämiseksi kartat on päivitettävä.";
 
-"traffic_outdated" = "Traffic data is outdated.";
+"traffic_outdated" = "Liikennetiedot ovat vanhentuneet.";
 
-"big_font" = "Bigger labels";
+"big_font" = "Suuremmat selitykset";
 
 "traffic_update_app" = "Please update MAPS.ME";
 
