--- a/iphone/Maps/nb.lproj/Localizable.strings
+++ b/iphone/Maps/nb.lproj/Localizable.strings
@@ -1637,10 +1637,10 @@
 "placepage_hotel_nearby" = "I nærheten";
 
 /* For ordering a taxi (as opposed to hotels or other things) */
-"taxi_order" = "Bestille";
+"taxi_order" = "Bestill drosje";
 
 /* How long it is until the taxi arrives */
-"taxi_wait" = "Expected in %s";
+"taxi_wait" = "Forventet om %s";
 
 /* When there are no available taxis nearby */
 "taxi_not_found" = "Kunne ikke finne drosje i nærheten";
@@ -1700,29 +1700,29 @@
 
 "dialog_taxi_error" = "Bestilling av taxi er ikke tilgjengelig for øyeblikket.";
 
-"advertisement" = "Advertisement";
+"advertisement" = "Reklame";
 
-"mobile_data_dialog" = "Use mobile internet to show detailed information?";
+"mobile_data_dialog" = "Bruke mobilt Internett til å vise detaljert informasjon?";
 
-"mobile_data_option_always" = "Use Always";
+"mobile_data_option_always" = "Bruk alltid";
 
-"mobile_data_option_today" = "Only Today";
+"mobile_data_option_today" = "Bare i dag";
 
-"mobile_data_option_not_today" = "Do not Use Today";
+"mobile_data_option_not_today" = "Ikke bruk i dag";
 
-"mobile_data" = "Mobile Internet";
+"mobile_data" = "Mobilt Internett";
 
-"mobile_data_description" = "Mobile internet is required for displaying detailed information about places, such as photographs, prices and reviews.";
+"mobile_data_description" = "Mobilt Internett er nødvendig for å vise detaljert informasjon om steder, for eksempel fotografier, priser og anmeldelser.";
 
-"mobile_data_option_never" = "Never Use";
+"mobile_data_option_never" = "Aldri bruk";
 
-"mobile_data_option_ask" = "Always Ask";
+"mobile_data_option_ask" = "Alltid spør";
 
-"traffic_update_maps_text" = "To display traffic data, maps must be updated.";
+"traffic_update_maps_text" = "For å vise trafikkdata må kartene i appen være oppdaterte.";
 
-"traffic_outdated" = "Traffic data is outdated.";
+"traffic_outdated" = "Trafikkdata er utdatert.";
 
-"big_font" = "Bigger labels";
+"big_font" = "Større etiketter";
 
 "traffic_update_app" = "Please update MAPS.ME";
 
