--- a/iphone/Maps/nl.lproj/Localizable.strings
+++ b/iphone/Maps/nl.lproj/Localizable.strings
@@ -1637,7 +1637,7 @@
 "placepage_hotel_nearby" = "In de buurt";
 
 /* For ordering a taxi (as opposed to hotels or other things) */
-"taxi_order" = "Bestellen";
+"taxi_order" = "Bestel een taxi";
 
 /* How long it is until the taxi arrives */
 "taxi_wait" = "Verwacht binnen %s";
@@ -1700,29 +1700,29 @@
 
 "dialog_taxi_error" = "Het bestellen van een taxi is tijdelijk niet beschikbaar.";
 
-"advertisement" = "Advertisement";
+"advertisement" = "Reclame";
 
-"mobile_data_dialog" = "Use mobile internet to show detailed information?";
+"mobile_data_dialog" = "Mobiel internet gebruiken om gedetailleerde informatie weer te geven?";
 
-"mobile_data_option_always" = "Use Always";
+"mobile_data_option_always" = "Altijd Gebruiken";
 
-"mobile_data_option_today" = "Only Today";
+"mobile_data_option_today" = "Enkel Vandaag";
 
-"mobile_data_option_not_today" = "Do not Use Today";
+"mobile_data_option_not_today" = "Vandaag niet Gebruiken";
 
-"mobile_data" = "Mobile Internet";
+"mobile_data" = "Mobiel Internet";
 
-"mobile_data_description" = "Mobile internet is required for displaying detailed information about places, such as photographs, prices and reviews.";
+"mobile_data_description" = "Mobiel internet is vereist voor het weergeven van gedetailleerde informatie over plaatsen, zoals foto's, prijzen en beoordelingen.";
 
-"mobile_data_option_never" = "Never Use";
+"mobile_data_option_never" = "Nooit Gebruiken";
 
-"mobile_data_option_ask" = "Always Ask";
+"mobile_data_option_ask" = "Altijd Vragen";
 
-"traffic_update_maps_text" = "To display traffic data, maps must be updated.";
+"traffic_update_maps_text" = "Om verkeersgegevens weer te geven, moeten de kaarten bijgewerkt worden.";
 
-"traffic_outdated" = "Traffic data is outdated.";
+"traffic_outdated" = "Verkeersgegevens zijn verouderd.";
 
-"big_font" = "Bigger labels";
+"big_font" = "Grotere labels";
 
 "traffic_update_app" = "Please update MAPS.ME";
 
