--- a/iphone/Maps/pl.lproj/Localizable.strings
+++ b/iphone/Maps/pl.lproj/Localizable.strings
@@ -1637,7 +1637,7 @@
 "placepage_hotel_nearby" = "W pobliżu";
 
 /* For ordering a taxi (as opposed to hotels or other things) */
-"taxi_order" = "Zamów";
+"taxi_order" = "Zamów taksówkę";
 
 /* How long it is until the taxi arrives */
 "taxi_wait" = "Szacunkowo przybędzie za %s";
@@ -1700,29 +1700,29 @@
 
 "dialog_taxi_error" = "Zamawianie taksówek jest tymczasowo niedostępne.";
 
-"advertisement" = "Advertisement";
+"advertisement" = "Reklama";
 
-"mobile_data_dialog" = "Use mobile internet to show detailed information?";
+"mobile_data_dialog" = "Wykorzystać internet mobilny, aby wyświetlić dane szczegółowe?";
 
-"mobile_data_option_always" = "Use Always";
+"mobile_data_option_always" = "Stosuj zawsze";
 
-"mobile_data_option_today" = "Only Today";
+"mobile_data_option_today" = "Tylko dzisiaj";
 
-"mobile_data_option_not_today" = "Do not Use Today";
+"mobile_data_option_not_today" = "Nie stosuj dzisiaj";
 
-"mobile_data" = "Mobile Internet";
+"mobile_data" = "Internet mobilny";
 
-"mobile_data_description" = "Mobile internet is required for displaying detailed information about places, such as photographs, prices and reviews.";
+"mobile_data_description" = "Do wyświetlania danych szczegółowych o miejscach (np. zdjęcia, ceny i recenzje) wymagany jest internet mobilny.";
 
-"mobile_data_option_never" = "Never Use";
+"mobile_data_option_never" = "Nigdy nie stosuj";
 
-"mobile_data_option_ask" = "Always Ask";
+"mobile_data_option_ask" = "Zawsze pytaj";
 
-"traffic_update_maps_text" = "To display traffic data, maps must be updated.";
+"traffic_update_maps_text" = "Aby wyświetlić dane o ruchu, muszą zostać zaktualizowane mapy.";
 
-"traffic_outdated" = "Traffic data is outdated.";
+"traffic_outdated" = "Dane o ruchu są przestarzałe.";
 
-"big_font" = "Bigger labels";
+"big_font" = "Większe etykiety";
 
 "traffic_update_app" = "Please update MAPS.ME";
 
