--- a/iphone/Maps/pt.lproj/Localizable.strings
+++ b/iphone/Maps/pt.lproj/Localizable.strings
@@ -1637,7 +1637,7 @@
 "placepage_hotel_nearby" = "Nas proximidades";
 
 /* For ordering a taxi (as opposed to hotels or other things) */
-"taxi_order" = "Encomendar";
+"taxi_order" = "Chamar um táxi";
 
 /* How long it is until the taxi arrives */
 "taxi_wait" = "Esperado em %s";
@@ -1700,29 +1700,29 @@
 
 "dialog_taxi_error" = "O serviço de táxi está temporariamente indisponível.";
 
-"advertisement" = "Advertisement";
+"advertisement" = "Anúncio";
 
-"mobile_data_dialog" = "Use mobile internet to show detailed information?";
+"mobile_data_dialog" = "Utilizar a internet móvel para mostrar informações detalhadas?";
 
-"mobile_data_option_always" = "Use Always";
+"mobile_data_option_always" = "Utilizar Sempre";
 
-"mobile_data_option_today" = "Only Today";
+"mobile_data_option_today" = "Apenas Hoje";
 
-"mobile_data_option_not_today" = "Do not Use Today";
+"mobile_data_option_not_today" = "Não Utilizar Hoje";
 
-"mobile_data" = "Mobile Internet";
+"mobile_data" = "Internet Móvel";
 
-"mobile_data_description" = "Mobile internet is required for displaying detailed information about places, such as photographs, prices and reviews.";
+"mobile_data_description" = "Para visualizar informações detalhadas sobre os locais, tais como fotos, preços e análises, é necessário acesso à internet móvel.";
 
-"mobile_data_option_never" = "Never Use";
+"mobile_data_option_never" = "Nunca Utilizar";
 
-"mobile_data_option_ask" = "Always Ask";
+"mobile_data_option_ask" = "Perguntar Sempre";
 
-"traffic_update_maps_text" = "To display traffic data, maps must be updated.";
+"traffic_update_maps_text" = "Para ver os dados de tráfego, os mapas devem ser atualizados.";
 
-"traffic_outdated" = "Traffic data is outdated.";
+"traffic_outdated" = "Os dados sobre o tráfego estão desatualizados.";
 
-"big_font" = "Bigger labels";
+"big_font" = "Etiquetas maiores";
 
 "traffic_update_app" = "Please update MAPS.ME";
 
