--- a/iphone/Maps/ro.lproj/Localizable.strings
+++ b/iphone/Maps/ro.lproj/Localizable.strings
@@ -1637,7 +1637,7 @@
 "placepage_hotel_nearby" = "În apropiere";
 
 /* For ordering a taxi (as opposed to hotels or other things) */
-"taxi_order" = "Comandă";
+"taxi_order" = "Comandați un taxi";
 
 /* How long it is until the taxi arrives */
 "taxi_wait" = "Așteptat în %s";
@@ -1700,29 +1700,29 @@
 
 "dialog_taxi_error" = "Comandarea unui taxi este momentan indisponibilă.";
 
-"advertisement" = "Advertisement";
+"advertisement" = "Reclamă";
 
-"mobile_data_dialog" = "Use mobile internet to show detailed information?";
+"mobile_data_dialog" = "Folosiți internetul mobil pentru a afişa informaţii detaliate?";
 
-"mobile_data_option_always" = "Use Always";
+"mobile_data_option_always" = "Folosiți întotdeauna";
 
-"mobile_data_option_today" = "Only Today";
+"mobile_data_option_today" = "Doar astăzi";
 
-"mobile_data_option_not_today" = "Do not Use Today";
+"mobile_data_option_not_today" = "Nu folosiți astăzi";
 
-"mobile_data" = "Mobile Internet";
+"mobile_data" = "Internet mobil";
 
-"mobile_data_description" = "Mobile internet is required for displaying detailed information about places, such as photographs, prices and reviews.";
+"mobile_data_description" = "Internetul mobil este necesar pentru afişarea de informaţii detaliate despre locuri, precum fotografii, preţuri şi recenzii.";
 
-"mobile_data_option_never" = "Never Use";
+"mobile_data_option_never" = "Nu utilizați niciodată";
 
-"mobile_data_option_ask" = "Always Ask";
+"mobile_data_option_ask" = "Întrebați întotdeauna";
 
-"traffic_update_maps_text" = "To display traffic data, maps must be updated.";
+"traffic_update_maps_text" = "Pentru a afişa datele privind traficul, hărțile trebuie actualizate.";
 
-"traffic_outdated" = "Traffic data is outdated.";
+"traffic_outdated" = "Datele privind traficul sunt învechite.";
 
-"big_font" = "Bigger labels";
+"big_font" = "Etichete mai mari";
 
 "traffic_update_app" = "Please update MAPS.ME";
 
