--- a/iphone/Maps/sv.lproj/Localizable.strings
+++ b/iphone/Maps/sv.lproj/Localizable.strings
@@ -1637,7 +1637,7 @@
 "placepage_hotel_nearby" = "I närheten";
 
 /* For ordering a taxi (as opposed to hotels or other things) */
-"taxi_order" = "Boka";
+"taxi_order" = "Beställ en taxi";
 
 /* How long it is until the taxi arrives */
 "taxi_wait" = "Förväntas om %s";
@@ -1700,29 +1700,29 @@
 
 "dialog_taxi_error" = "Du kan inte beställa en taxi just nu.";
 
-"advertisement" = "Advertisement";
+"advertisement" = "Annons";
 
-"mobile_data_dialog" = "Use mobile internet to show detailed information?";
+"mobile_data_dialog" = "Använd mobilt nätverk för att visa detaljerad information?";
 
-"mobile_data_option_always" = "Use Always";
+"mobile_data_option_always" = "Använd alltid";
 
-"mobile_data_option_today" = "Only Today";
+"mobile_data_option_today" = "Endast idag";
 
-"mobile_data_option_not_today" = "Do not Use Today";
+"mobile_data_option_not_today" = "Använd inte idag";
 
-"mobile_data" = "Mobile Internet";
+"mobile_data" = "Mobilt internet";
 
-"mobile_data_description" = "Mobile internet is required for displaying detailed information about places, such as photographs, prices and reviews.";
+"mobile_data_description" = "Mobil internet krävs för att visa detaljerad information om platser, som t. ex. fotografier, priser och omdömen.";
 
-"mobile_data_option_never" = "Never Use";
+"mobile_data_option_never" = "Använd aldrig";
 
-"mobile_data_option_ask" = "Always Ask";
+"mobile_data_option_ask" = "Fråga alltid";
 
-"traffic_update_maps_text" = "To display traffic data, maps must be updated.";
+"traffic_update_maps_text" = "Kartor måste uppdateras för att visa trafikdata.";
 
-"traffic_outdated" = "Traffic data is outdated.";
+"traffic_outdated" = "Trafikdata är inaktuellt.";
 
-"big_font" = "Bigger labels";
+"big_font" = "Större etiketter";
 
 "traffic_update_app" = "Please update MAPS.ME";
 
