--- a/iphone/Maps/tr.lproj/Localizable.strings
+++ b/iphone/Maps/tr.lproj/Localizable.strings
@@ -1637,7 +1637,7 @@
 "placepage_hotel_nearby" = "Yakınlarda";
 
 /* For ordering a taxi (as opposed to hotels or other things) */
-"taxi_order" = "Çağır";
+"taxi_order" = "Taksi çağır";
 
 /* How long it is until the taxi arrives */
 "taxi_wait" = "%s içinde bekleniyor";
@@ -1700,29 +1700,29 @@
 
 "dialog_taxi_error" = "Taksi çağırma geçici olarak kullanılamıyor.";
 
-"advertisement" = "Advertisement";
+"advertisement" = "Reklam";
 
-"mobile_data_dialog" = "Use mobile internet to show detailed information?";
+"mobile_data_dialog" = "Ayrıntılı bilgileri görüntülemek için mobil internet kullanılsın mı?";
 
-"mobile_data_option_always" = "Use Always";
+"mobile_data_option_always" = "Her zaman kullan";
 
-"mobile_data_option_today" = "Only Today";
+"mobile_data_option_today" = "Sadece Bugün";
 
-"mobile_data_option_not_today" = "Do not Use Today";
+"mobile_data_option_not_today" = "Bugün Kullanma";
 
-"mobile_data" = "Mobile Internet";
+"mobile_data" = "Mobil İnternet";
 
-"mobile_data_description" = "Mobile internet is required for displaying detailed information about places, such as photographs, prices and reviews.";
+"mobile_data_description" = "Mobil internet, fotoğraflar, fiyatlar ve yorumlar gibi mekanlarla ilgili ayrıntılı bilgileri görüntülemek için gereklidir.";
 
-"mobile_data_option_never" = "Never Use";
+"mobile_data_option_never" = "Asla Kullanma";
 
-"mobile_data_option_ask" = "Always Ask";
+"mobile_data_option_ask" = "Her Zaman Sor";
 
-"traffic_update_maps_text" = "To display traffic data, maps must be updated.";
+"traffic_update_maps_text" = "Trafik verilerini görüntülemek için haritaların güncellenmesi gerekiyor.";
 
-"traffic_outdated" = "Traffic data is outdated.";
+"traffic_outdated" = "Trafik verileri güncel değil.";
 
-"big_font" = "Bigger labels";
+"big_font" = "Daha büyük etiketler";
 
 "traffic_update_app" = "Please update MAPS.ME";
 
