--- a/iphone/Maps/uk.lproj/Localizable.strings
+++ b/iphone/Maps/uk.lproj/Localizable.strings
@@ -1637,7 +1637,7 @@
 "placepage_hotel_nearby" = "Поблизу";
 
 /* For ordering a taxi (as opposed to hotels or other things) */
-"taxi_order" = "Замовити";
+"taxi_order" = "Замовлення таксі";
 
 /* How long it is until the taxi arrives */
 "taxi_wait" = "Очікується через %s";
@@ -1700,29 +1700,29 @@
 
 "dialog_taxi_error" = "Замовлення таксі тимчасово недоступне.";
 
-"advertisement" = "Advertisement";
+"advertisement" = "Реклама";
 
-"mobile_data_dialog" = "Use mobile internet to show detailed information?";
+"mobile_data_dialog" = "Використовувати мобільні дані для перегляду докладної інформації?";
 
-"mobile_data_option_always" = "Use Always";
+"mobile_data_option_always" = "Завжди";
 
-"mobile_data_option_today" = "Only Today";
+"mobile_data_option_today" = "Тільки сьогодні";
 
-"mobile_data_option_not_today" = "Do not Use Today";
+"mobile_data_option_not_today" = "За винятком сьогодні";
 
-"mobile_data" = "Mobile Internet";
+"mobile_data" = "Мобільні дані";
 
-"mobile_data_description" = "Mobile internet is required for displaying detailed information about places, such as photographs, prices and reviews.";
+"mobile_data_description" = "Використання мобільних даних необхідно для відображення докладної інформації про місця (наприклад, фотографій, цін і відгуків).";
 
-"mobile_data_option_never" = "Never Use";
+"mobile_data_option_never" = "Ніколи";
 
-"mobile_data_option_ask" = "Always Ask";
+"mobile_data_option_ask" = "Завжди питати";
 
-"traffic_update_maps_text" = "To display traffic data, maps must be updated.";
+"traffic_update_maps_text" = "Для відображення інформації про трафік необхідно оновити карти.";
 
-"traffic_outdated" = "Traffic data is outdated.";
+"traffic_outdated" = "Дані про трафік застаріли.";
 
-"big_font" = "Bigger labels";
+"big_font" = "Більші написи";
 
 "traffic_update_app" = "Please update MAPS.ME";
 
