--- a/iphone/Maps/zh-Hans.lproj/Localizable.strings
+++ b/iphone/Maps/zh-Hans.lproj/Localizable.strings
@@ -1637,7 +1637,7 @@
 "placepage_hotel_nearby" = "附近";
 
 /* For ordering a taxi (as opposed to hotels or other things) */
-"taxi_order" = "预订";
+"taxi_order" = "预订出租车";
 
 /* How long it is until the taxi arrives */
 "taxi_wait" = "预计 %s后到达";
@@ -1700,29 +1700,29 @@
 
 "dialog_taxi_error" = "叫出租车服务暂时无法使用。";
 
-"advertisement" = "Advertisement";
+"advertisement" = "广告";
 
-"mobile_data_dialog" = "Use mobile internet to show detailed information?";
+"mobile_data_dialog" = "使用移动网络显示详细信息？";
 
-"mobile_data_option_always" = "Use Always";
+"mobile_data_option_always" = "始终使用";
 
-"mobile_data_option_today" = "Only Today";
+"mobile_data_option_today" = "仅在今天";
 
-"mobile_data_option_not_today" = "Do not Use Today";
+"mobile_data_option_not_today" = "今天不使用";
 
-"mobile_data" = "Mobile Internet";
+"mobile_data" = "移动网络";
 
-"mobile_data_description" = "Mobile internet is required for displaying detailed information about places, such as photographs, prices and reviews.";
+"mobile_data_description" = "要显示地点的详细信息（例如照片、价格和评价），需要使用移动网络。";
 
-"mobile_data_option_never" = "Never Use";
+"mobile_data_option_never" = "从不使用";
 
-"mobile_data_option_ask" = "Always Ask";
+"mobile_data_option_ask" = "总是询问";
 
-"traffic_update_maps_text" = "To display traffic data, maps must be updated.";
+"traffic_update_maps_text" = "要显示交通数据，必须更新地图。";
 
-"traffic_outdated" = "Traffic data is outdated.";
+"traffic_outdated" = "交通数据已过时。";
 
-"big_font" = "Bigger labels";
+"big_font" = "更大的标签";
 
 "traffic_update_app" = "Please update MAPS.ME";
 
